--- a/pages/content/src/content.css
+++ b/pages/content/src/content.css
@@ -4,31 +4,33 @@
   font-size: 14px;
 }
 
-.__ai_translator__ svg {
-  pointer-events: none !important;
-  user-select: none !important;
-}
-
-.__ai_translator__ .__ai_translator__-card-head {
-  padding: 12px !important;
-}
-
-.__ai_translator__slot_card > .__ai_translator__-card-body {
-  padding: 0px !important;
-}
-
-.__ai_translator__:has(.__ai_translator__slot_card) {
+.__ai_translator__:has(.slot_card) {
   width: max-content;
   min-width: 460px;
   max-width: 780px;
 }
 
-.__ai_translator__paragraph {
-  max-height: 520px !important;
-  overflow: hidden !important;
-  scrollbar-width: none !important;
-}
+@scope (.__ai_translator__) {
+  svg {
+    pointer-events: none !important;
+    user-select: none !important;
+  }
 
-.__ai_translator__ .__ai_translator__-splitter-panel .__ai_translator__-space {
-  width: 100% !important;
+  .ant-card-head {
+    padding: 12px !important;
+  }
+
+  .ant-card-body {
+    padding: 0px !important;
+  }
+
+  .paragraph {
+    max-height: 520px !important;
+    overflow: hidden !important;
+    scrollbar-width: none !important;
+  }
+
+  .ant-splitter-panel .ant-space {
+    width: 100% !important;
+  }
 }
